==> Staler2019/NCU-HW/Robot-Design/testCar/CM7/Core/Src/vl53l0x.c <==
#include <stdio.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include "stm32h7xx_hal.h"
#include<main.h>
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define SEQUENCE_ENABLE_FINAL_RANGE 0x80
#define SEQUENCE_ENABLE_PRE_RANGE   0x40
#define SEQUENCE_ENABLE_TCC         0x10
#define SEQUENCE_ENABLE_DSS         0x08
#define SEQUENCE_ENABLE_MSRC        0x04
#define REG_IDENTIFICATION_MODEL_ID		0xc0
#define REG_IDENTIFICATION_REVISION_ID		0xc2
#define REG_SYSRANGE_START			0x00
#define REG_RESULT_INTERRUPT_STATUS 		0x13
#define RESULT_RANGE_STATUS      		0x14
#define ALGO_PHASECAL_LIM                       0x30
#define ALGO_PHASECAL_CONFIG_TIMEOUT            0x30
#define GLOBAL_CONFIG_VCSEL_WIDTH               0x32
#define FINAL_RANGE_CONFIG_VALID_PHASE_LOW      0x47
#define FINAL_RANGE_CONFIG_VALID_PHASE_HIGH     0x48
#define PRE_RANGE_CONFIG_VCSEL_PERIOD           0x50
#define PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI      0x51
#define PRE_RANGE_CONFIG_VALID_PHASE_LOW        0x56
#define PRE_RANGE_CONFIG_VALID_PHASE_HIGH       0x57
#define REG_MSRC_CONFIG_CONTROL                 0x60
#define FINAL_RANGE_CONFIG_VCSEL_PERIOD         0x70
#define FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI    0x71
#define MSRC_CONFIG_TIMEOUT_MACROP              0x46
#define FINAL_RANGE_CONFIG_MIN_COUNT_RATE_RTN_LIMIT  0x44

static unsigned short readReg16(unsigned char ucAddr)
{
unsigned char ucTemp[2];
int rc;

	HAL_I2C_Master_Transmit(&hi2c1, 0x52, &ucAddr, 1, 100);
	HAL_I2C_Master_Receive(&hi2c1, 0x52, ucTemp, 2, 100);
	
	return (unsigned short)((ucTemp[0]<<8) + ucTemp[1]);
}

static unsigned char readReg(unsigned char ucAddr)
{
unsigned char ucTemp;
int rc;

    ucTemp = ucAddr;
    HAL_I2C_Master_Transmit(&hi2c1, 0x52, &ucAddr, 1, 100);
	HAL_I2C_Master_Receive(&hi2c1, 0x52, ucTemp, 2, 100);
	return ucTemp;
}

static void readMulti(unsigned char ucAddr, unsigned char *pBuf, int iCount)
{
int rc;

	HAL_I2C_Master_Transmit(&hi2c1, 0x52, &ucAddr, 1, 100);
    rc = HAL_I2C_Master_Receive(&hi2c1, 0x52, pBuf, iCount, 100);
}

static void writeMulti(unsigned char ucAddr, unsigned char *pBuf, int iCount)
{
unsigned char ucTemp[16];
int rc;

	ucTemp[0] = ucAddr;
	memcpy(&ucTemp[1], pBuf, iCount);
    HAL_I2C_Master_Transmit(&hi2c1, 0x52,&ucTemp, iCount+1, 100);
}

static void writeReg16(unsigned char ucAddr, unsigned short usValue)
{
unsigned char ucTemp[4];
int rc;

	ucTemp[0] = ucAddr;
	ucTemp[1] = (unsigned char)(usValue >> 8); // MSB first
	ucTemp[2] = (unsigned char)usValue;
    HAL_I2C_Master_Transmit(&hi2c1, 0x52,&ucTemp, 3, 100);
}

static void writeReg(unsigned char ucAddr, unsigned char ucValue)
{
unsigned char ucTemp[2];
int rc;

	ucTemp[0] = ucAddr;
	ucTemp[1] = ucValue;
	HAL_I2C_Master_Transmit(&hi2c1, 0x52, &ucTemp, 2, 1);
	//if (rc != 2) {}; // suppress warning
}

static void writeRegList(unsigned char *ucList)
{
unsigned char ucCount = *ucList++; // count is the first element in the list
int rc;

	while (ucCount)
	{
        HAL_I2C_Master_Transmit(&hi2c1, 0x52, ucList, 2, 100);
		if (rc != 2) {};
		ucList += 2;
		ucCount--;
	}
}
