==> maxksiazka/SR_Project/sumo/lib/libVL53L0X_pico/src/VL53L0X_pico.c <==
#include "VL53L0X_pico.h"
#define usleep(A) sleep_us(A)
#define calcMacroPeriod(vcsel_period_pclks)                                    \
    ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define SEQUENCE_ENABLE_FINAL_RANGE 0x80
#define SEQUENCE_ENABLE_PRE_RANGE 0x40
#define SEQUENCE_ENABLE_TCC 0x10
#define SEQUENCE_ENABLE_DSS 0x08
#define SEQUENCE_ENABLE_MSRC 0x04
#define REG_IDENTIFICATION_MODEL_ID 0xc0
#define REG_IDENTIFICATION_REVISION_ID 0xc2
#define REG_SYSRANGE_START 0x00
#define REG_RESULT_INTERRUPT_STATUS 0x13
#define RESULT_RANGE_STATUS 0x14
#define ALGO_PHASECAL_LIM 0x30
#define ALGO_PHASECAL_CONFIG_TIMEOUT 0x30
#define GLOBAL_CONFIG_VCSEL_WIDTH 0x32
#define FINAL_RANGE_CONFIG_VALID_PHASE_LOW 0x47
#define FINAL_RANGE_CONFIG_VALID_PHASE_HIGH 0x48
#define PRE_RANGE_CONFIG_VCSEL_PERIOD 0x50
#define PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI 0x51
#define PRE_RANGE_CONFIG_VALID_PHASE_LOW 0x56
#define PRE_RANGE_CONFIG_VALID_PHASE_HIGH 0x57
#define REG_MSRC_CONFIG_CONTROL 0x60
#define FINAL_RANGE_CONFIG_VCSEL_PERIOD 0x70
#define FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI 0x71
#define MSRC_CONFIG_TIMEOUT_MACROP 0x46
#define FINAL_RANGE_CONFIG_MIN_COUNT_RATE_RTN_LIMIT 0x44
#define SYSRANGE_START 0x00
#define SYSTEM_SEQUENCE_CONFIG 0x01
#define SYSTEM_INTERRUPT_CONFIG_GPIO 0x0A
#define RESULT_INTERRUPT_STATUS 0x13
#define VHV_CONFIG_PAD_SCL_SDA__EXTSUP_HV 0x89

static unsigned short readReg16(i2c_inst_t* i2c_port, uint8_t addr,
                                unsigned char ucAddr) {
    unsigned char ucTemp[2];
    i2c_write_blocking(i2c_port, addr, &ucAddr, 1, true);
    i2c_read_blocking(i2c_port, addr, ucTemp, 2, false);
    return (unsigned short)((ucTemp[0] << 8) + ucTemp[1]);
}

static unsigned char readReg(i2c_inst_t* i2c, uint8_t addr,
                             unsigned char ucAddr) {
    unsigned char ucTemp;
    i2c_write_blocking(i2c, addr, &ucAddr, 1, true);
    i2c_read_blocking(i2c, addr, &ucTemp, 1, false);

    return ucTemp;
}

static void readMulti(i2c_inst_t* i2c, uint8_t addr, unsigned char ucAddr,
                      unsigned char* pBuf, int iCount) {
    i2c_write_blocking(i2c, addr, &ucAddr, 1, true);
    i2c_read_blocking(i2c, addr, pBuf, iCount, false);
}

static void writeMulti(i2c_inst_t* i2c, uint8_t addr, unsigned char ucAddr,
                       unsigned char* pBuf, int iCount) {
    unsigned char ucTemp[16];
    int rc;

    ucTemp[0] = ucAddr;
    memcpy(&ucTemp[1], pBuf, iCount);
    i2c_write_blocking(i2c, addr, ucTemp, iCount + 1, false);
}

static void writeReg16(i2c_inst_t* i2c, uint8_t addr, unsigned char ucAddr,
                       unsigned short usValue) {
    unsigned char ucTemp[4];
    int rc;

    ucTemp[0] = ucAddr;
    ucTemp[1] = (unsigned char)(usValue >> 8); // MSB first
    ucTemp[2] = (unsigned char)usValue;
    i2c_write_blocking(i2c, addr, ucTemp, 3, false);

}

static void writeReg(i2c_inst_t* i2c, uint8_t addr, unsigned char ucAddr,
                     unsigned char ucValue) {
    unsigned char ucTemp[2];
    int rc;

    ucTemp[0] = ucAddr;
    ucTemp[1] = ucValue;
    i2c_write_blocking(i2c, addr, ucTemp, 2, false);

}

static void writeRegList(i2c_inst_t* i2c, uint8_t addr, unsigned char* ucList) {
    unsigned char ucCount = *ucList++; // count is the first element in the list
    int rc;
    while (ucCount) {
        i2c_write_blocking(i2c, addr, ucList, 2, false);
        ucList += 2;
        ucCount--;
    }

}
